k8s/overlays/dev/app/saleor/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: saleor-storefront
    app.kubernetes.io/component: storefront
    app.kubernetes.io/instance: saleor-storefront
    app.kubernetes.io/managed-by: Kustomize
    app.kubernetes.io/name: saleor
  name: saleor-storefront
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/component: storefront
    app.kubernetes.io/instance: saleor-storefront
    app.kubernetes.io/name: saleor
  type: ClusterIP
